adapting the project to follow the MVC model , first step on refactoring